Fixbug content width too large

--- a/components/ContentCard/styles.module.scss
+++ b/components/ContentCard/styles.module.scss
@@ -1,5 +1,6 @@
 .container {
-  width: 85%;
+  width: 100%;
+  max-width: 1200px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -7,10 +8,12 @@
   padding: 75px 0;
   color: #a67f56;
 
+  @media (max-width: 1200px) {
+    padding: 0 20px;
+  }
+
   @media (max-width: 800px) {
     flex-direction: column;
-    width: 100%;
-    padding: 0 20px;
     text-align: justify;
   }
 }
