--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -50,6 +50,10 @@
   z-index: 1000;
   border-bottom: 0.5px solid #a67f56;
 
+  @media (max-width: 1200px) {
+    padding: 0 20px;
+  }
+
   @media (max-width: 960px) {
     display: none;
   }
